log.txt
error[E0596]: cannot borrow `nested_goals.nested_goals` as mutable, as `nested_goals` is not declared as mutable
   --> /home/lcnr/rust1/compiler/rustc_type_ir/src/search_graph/mod.rs:565:13
    |
565 |             nested_goals.nested_goals.retain(|nested, _| heads.iter().any(|h| &self.stack[h].input == nested));
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
561 |             let StackEntry { heads, mut nested_goals, encountered_overflow, .. } = final_entry;
    |                                     +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `rustc_type_ir` (lib) due to 1 previous error
